--- a/src/locales/prs/common.json
+++ b/src/locales/prs/common.json
@@ -181,7 +181,23 @@
         "حافظ صاحب صدیق‌الله"
       ],
       "gallery": "گالری خاطرات",
-      "galleryDescription": "خاطرات زندگی شیخ خلیفه صاحب ارغندی (رح) و تاریخ انوارالعلوم"
+      "galleryDescription": "خاطرات زندگی شیخ خلیفه صاحب ارغندی (رح) و تاریخ انوارالعلوم",
+      "gallerySection": {
+      "title": "مدرسه",
+      "collection": "گالری",
+      "description": "زیبایی دانش جاودانه و تعالیم معنوی مدرسه ما را کشف کنید که برای پرورش ذهن‌ها و قلب‌ها برای ساختن آینده‌ای روشن‌تر و آگاه‌تر طراحی شده است.",
+      "unavailable": "گالری در حال حاضر در دسترس نیست. لطفاً بعداً مراجعه کنید.",
+      "noImagesAvailable": "هیچ تصویری موجود نیست",
+      "untitled": "بدون عنوان",
+      "general": "عمومی",
+      "featured": "ویژه",
+      "featuredCollection": "مجموعه ویژه",
+      "productionProcess": "فرآیند تولید",
+      "showLess": "کمتر نشان بده",
+      "showAll": "همه را نشان بده",
+      "imageCounter": "تصاویر",
+      "of": "از"
+      }
     }
   },
   "footer": {
