--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -181,7 +181,23 @@
         "حافظ صاحب صدیق‌الله"
       ],
       "gallery": "د یادښتونو ګالري",
-      "galleryDescription": "د شیخ خلیفه صاحب ارغندی (رح) د ژوند او د انوارالعلوم د تاریخ یادښتونه"
+      "galleryDescription": "د شیخ خلیفه صاحب ارغندی (رح) د ژوند او د انوارالعلوم د تاریخ یادښتونه",
+      "gallerySection": {
+      "title": "مدرسه",
+      "collection": "ګالري",
+      "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا کشف وکړئ، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
+      "unavailable": "ګالري اوس مهال شتون نلري. مهرباني وکړئ وروسته بیا وګورئ.",
+      "noImagesAvailable": "هیڅ انځور شتون نلري",
+      "untitled": "بې نومه",
+      "general": "عمومي",
+      "featured": "ځانګړی",
+      "featuredCollection": "ځانګړی ټولګه",
+      "productionProcess": "د تولید پروسه",
+      "showLess": "لږ وښایاست",
+      "showAll": "ټول وښایاست",
+      "imageCounter": "انځورونه",
+      "of": "څخه"
+      }
     }
   },
   "footer": {
