--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -183,20 +183,20 @@
       "gallery": "د یادښتونو ګالري",
       "galleryDescription": "د شیخ خلیفه صاحب ارغندی (رح) د ژوند او د انوارالعلوم د تاریخ یادښتونه",
       "gallerySection": {
-      "title": "مدرسه",
-      "collection": "ګالري",
-      "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا کشف وکړئ، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
-      "unavailable": "ګالري اوس مهال شتون نلري. مهرباني وکړئ وروسته بیا وګورئ.",
-      "noImagesAvailable": "هیڅ انځور شتون نلري",
-      "untitled": "بې نومه",
-      "general": "عمومي",
-      "featured": "ځانګړی",
-      "featuredCollection": "ځانګړی ټولګه",
-      "productionProcess": "د تولید پروسه",
-      "showLess": "لږ وښایاست",
-      "showAll": "ټول وښایاست",
-      "imageCounter": "انځورونه",
-      "of": "څخه"
+        "title": "مدرسه",
+        "collection": "ګالري",
+        "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا کشف وکړئ، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
+        "unavailable": "ګالري اوس مهال شتون نلري. مهرباني وکړئ وروسته بیا وګورئ.",
+        "noImagesAvailable": "هیڅ انځور شتون نلري",
+        "untitled": "بې نومه",
+        "general": "عمومي",
+        "featured": "ځانګړی",
+        "featuredCollection": "ځانګړی ټولګه",
+        "productionProcess": "د تولید پروسه",
+        "showLess": "لږ وښایاست",
+        "showAll": "ټول وښایاست",
+        "imageCounter": "انځورونه",
+        "of": "څخه"
       }
     }
   },
@@ -214,6 +214,12 @@
     "privacyPolicy": "د محرمیت پالیسي",
     "termsOfService": "د خدمت شرطونه"
   },
+  "iftah": {
+    "title": "د فتوا څانګه",
+    "subtitle": "اسلامي پوهنتون - د اسلامي مسایلو په اړه پوښتنه وکړئ او د زموږ د علماءو څخه فتوا ترلاسه کړئ",
+    "universityTitle": "اسلامي پوهنتون",
+    "departmentSubtitle": "د فتوا څانګه"
+  },
   "courses": {
     "title": "د اسلامي کورسونو",
     "unableToLoad": "د کورسونو پورته کول نشي کیدی",
@@ -228,6 +234,7 @@
     "lessons": "دروس",
     "viewCourse": "د کورس لیدل",
     "recentlyUpdated": "وروسته تازه شوی",
+    "instructorFallback": "حق مدرسه",
     "courseNotFound": "کورس و نه موندل شو",
     "courseNotFoundMessage": "د کورس چې تاسو یې لټوئ شتون نلري.",
     "browseAllCourses": "ټول کورسونه وګورئ",
@@ -261,7 +268,7 @@
   },
   "home": {
     "exploreKnowledge": "د پوهې څیړنه",
-    "popularCourses": "زموږ مشهور کورسونه",
+    "popularCourses": "مشهور کورسونه",
     "popularCoursesHighlight": "مشهور کورسونه",
     "coursesDescription": "زموږ مشهور کورسونو کشف وکړئ، چې د اصلي اسلامي پوهې لپاره ډیزاین شوي دي چې په",
     "quran": "قرآن",
@@ -270,7 +277,7 @@
     "loadingCourses": "د کورسونو پورته کول...",
     "viewAllCourses": "ټول کورسونه وګورئ",
     "loadingEvents": "د پیښو پورته کول...",
-    "ourBooks": "زموږ کتابونه",
+    "ourBooks": "کتابونه",
     "booksHighlight": "کتابونه",
     "booksDescription": "په",
     "booksDescriptionEnd": "بنسټ لرونکي، زموږ کتابونه اصلي اسلامي پوهه وړاندې کوي.",
@@ -278,13 +285,13 @@
     "viewAllBooks": "ټول کتابونه وګورئ",
     "loadingGallery": "د ګالري پورته کول...",
     "celebratingSuccess": "د بریالیتوب لمانځه",
-    "ourGraduates": "زموږ فارغان",
+    "ourGraduates": "فارغان",
     "graduatesHighlight": "فارغان",
     "graduatesDescription": "د هغو زده کړیالو د بریالیتوبونو او سفرونو روښانه کول چې په بریالیتوب سره خپل کورسونه بشپړ کړي",
     "loadingGraduates": "د فارغانو پورته کول...",
     "viewAllGraduation": "ټول فراغتونه وګورئ",
     "readOurBlog": "زموږ بلاګ ولولئ",
-    "exploreOurBlog": "زموږ بلاګ وګورئ",
+    "exploreOurBlog": "بلاګ",
     "blogHighlight": "بلاګ",
     "blogDescription": "د زموږ د زده کړیالو څخه تازه مقالې، پوهه او کیسې کشف کړئ",
     "loadingBlogPosts": "د بلاګ پوسټونو پورته کول...",
@@ -314,5 +321,71 @@
     "organizedBy": "د انوارالعلوم مدرسې لخوا تنظیم شوی",
     "eventDetails": "د پیښې جزئیات",
     "viewAllEvents": "ټولې پیښې وګورئ"
+  },
+  "header": {
+    "courses": {
+      "title": "اسلامي کورسونه",
+      "subtitle": "زموږ د اسلامي تعلیماتو پراخه پروګرامونه او کورسونه وپلټئ"
+    },
+    "articles": {
+      "title": "اسلامي مقالې",
+      "subtitle": "د اسلامي تعلیماتو او معاصر مسایلو په اړه بصیرت لرونکي مقالې ولولئ"
+    },
+    "blogs": {
+      "title": "اسلامي بلاګونه",
+      "subtitle": "زموږ د وروستي اسلامي بلاګ پوسټونو او بصیرتونو سره تازه پاتې شئ"
+    },
+    "events": {
+      "title": "اسلامي پیښې",
+      "subtitle": "زموږ د راتلونکو اسلامي پیښو، سیمینارونو او غونډو کې ګډون وکړئ"
+    },
+    "books": {
+      "title": "اسلامي کتابونه",
+      "subtitle": "زموږ د اسلامي کتابونو او ادبیاتو ټولګه ومومئ"
+    },
+    "authors": {
+      "title": "اسلامي لیکوالان",
+      "subtitle": "زموږ د درناوي وړ اسلامي علماوو او لیکوالانو سره ووینئ"
+    },
+    "awlayaa": {
+      "title": "اولیاء الله",
+      "subtitle": "د الله د دوستانو د ژوند او تعلیماتو په اړه زده کړئ"
+    },
+    "tasawwuf": {
+      "title": "تصوف",
+      "subtitle": "د اسلامي عمل د روحاني ابعادو وپلټئ"
+    },
+    "gallery": {
+      "title": "ګالري",
+      "subtitle": "زموږ د اسلامي پیښو او فعالیتونو عکسونه وګورئ"
+    },
+    "about": {
+      "title": "زموږ په اړه",
+      "subtitle": "زموږ د اسلامي تعلیماتو کې د ماموریت او لیدلوري په اړه زده کړئ"
+    },
+    "contact": {
+      "title": "زموږ سره اړیکه",
+      "subtitle": "د هر ډول پوښتنو یا ملاتړ لپاره زموږ سره اړیکه ونیسئ"
+    },
+    "donation": {
+      "title": "زموږ ماموریت ملاتړ وکړئ",
+      "subtitle": "د اسلامي پوهې او تعلیماتو د پراخولو په برخه کې زموږ سره مرسته وکړئ"
+    },
+    "registration": {
+      "title": "ثبت نامه",
+      "subtitle": "زموږ د اسلامي کورسونو او تعلیمي پروګرامونو کې ګډون وکړئ"
+    },
+    "graduatedStudents": {
+      "title": "فارغان",
+      "subtitle": "زموږ د بریالي فارغانو او د دوی د لاسته راوړنو جشن"
+    },
+    "iftah": {
+      "title": "افتاح",
+      "subtitle": "زموږ د افتاح پروګرام او روحاني لارښوونو وپلټئ"
+    },
+    "default": {
+      "title": "اسلامي تعلیمات",
+      "subtitle": "زموږ د پراخه اسلامي زده کړې پلیټفارم ته ښه راغلاست"
+    }
   }
 }
