--- a/src/locales/prs/common.json
+++ b/src/locales/prs/common.json
@@ -489,5 +489,27 @@
       "title": "آموزش اسلامی",
       "subtitle": "به پلتفرم جامع یادگیری اسلامی ما خوش آمدید"
     }
+  },
+  "awlyaaCharts": {
+    "loading": "در حال بارگذاری چارت‌های اولیاء...",
+    "unableToLoad": "نمی‌توان چارت‌ها را بارگذاری کرد",
+    "noMasterTeachers": "هیچ استاد اصلی یافت نشد",
+    "noMasterTeachersDesc": "هیچ استاد ریشه‌ای در داده‌های فعلی موجود نیست.",
+    "previous": "قبلی",
+    "next": "بعدی",
+    "of": "از",
+    "seeAllTeachers": "مشاهده همه {count} استاد",
+    "showLess": "کمتر نشان بده",
+    "basicInformation": "اطلاعات پایه",
+    "uniqueId": "شناسه منحصر به فرد:",
+    "created": "ایجاد شده:",
+    "updated": "به‌روزرسانی شده:",
+    "teachers": "استادان ({count})",
+    "students": "دانش‌آموزان ({count})",
+    "added": "اضافه شده:",
+    "noRelationships": "هیچ رابطه‌ای برای این عالم ثبت نشده است.",
+    "fullDetails": "جزئیات کامل",
+    "fullDetailsDesc": "اطلاعات کامل این عالم شامل زندگینامه، دستاوردها و موارد دیگر را مشاهده کنید.",
+    "viewFullProfile": "مشاهده پروفایل کامل"
   }
 }
